feat(vp-access-business): add payment endpoint in retention module and update swagger
